--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "lodash": "^4.17.21",
     "mysql2": "^3.11.5",
     "passport-jwt": "^4.0.1",
     "redis": "^4.7.0",
