--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         condition: service_healthy
     environment:
       - NODE_ENV=production
-      - DATABASE_HOST=localhost
+      - DATABASE_HOST=db
       - DATABASE_PORT=3306
       - DATABASE_USERNAME=root
       - DATABASE_PASSWORD=root
@@ -36,10 +36,12 @@ services:
   db:
     image: mysql:8.0
     ports:
-      - "3306:3306"
+      - "3307:3306"
     environment:
       - MYSQL_DATABASE=tmbd-db
       - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_ROOT_HOST=%  # This allows connections from any host
+    command: --default-authentication-plugin=mysql_native_password  # Use native password authentication
     volumes:
       - mysql_data:/var/lib/mysql
     healthcheck:
